kubernetes/istio-demo/egress/01-grpc-client-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: grpc-client
  labels:
    app: grpc-client
spec:
  containers:
    - name: grpc-client
      image: lukelau/grpc-client:1.1
      command: ['sh', '-c', 'sleep 100000']
