kubernetes/istio-demo/egress/00-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: grpc-egress-http
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
kind: Endpoints
apiVersion: v1
metadata:
  name: grpc-egress-http
subsets:
  - addresses:
      - ip: 35.239.42.83
    ports:
      - port: 80
