kubernetes/istio-demo/egress/21-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: grpc-egress-http
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
