kubernetes/istio-demo/egress/30-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: grpc-egress-http-30
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
