kubernetes/istio-demo/egress/60-tcp-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: tcp-egress-60
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
