kubernetes/istio-demo/egress/31-egress-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-egressgateway-32
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 80
        name: http2
        protocol: HTTP2
      hosts:
        - "*"
