kubernetes/istio-demo/egress/61-tcp-service-entry.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-tcp-service-entry-61
spec:
  hosts:
  - tcp-egress-60.default.svc.cluster.local
  ports:
  - number: 80
    name: tcp
    protocol: TCP
  resolution: STATIC
  location: MESH_EXTERNAL
  endpoints:
    - address: 35.239.42.83
      ports:
        tcp: 80
